bk_ida/gccida/g2/get_last_value_validate
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_last_value_validate/src/combine.c:11945:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( mode_class_0[v23] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_last_value_validate/src/combine.c:12025:33: error: use of undeclared identifier 'machine_mode'
*v4 = gen_rtx_fmt_e( CLOBBER, ( machine_mode)*( ( unsigned __int8 *)v7 + 2), const_int_rtx[64]); 
                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_last_value_validate/src/obj/combine.o] Error 1
